--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Clase2"
         tools:targetApi="31">
         <activity
+            android:name=".MyGameActivity"
+            android:exported="false"
+            android:label="@string/title_activity_my_game"
+            android:theme="@style/Theme.Clase2" />
+        <activity
             android:name=".TheGameActitvity"
             android:exported="false"
             android:label="@string/title_activity_the_game_actitvity"
