--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Clase2"
+        android:theme="@style/Theme.lab2"
         tools:targetApi="31">
         <activity
             android:name=".MyGameActivity"
             android:exported="false"
             android:label="@string/title_activity_my_game"
-            android:theme="@style/Theme.Clase2" />
+            android:theme="@style/Theme.lab2" />
         <activity
             android:name=".TheGameActitvity"
             android:exported="false"
             android:label="@string/title_activity_the_game_actitvity"
-            android:theme="@style/Theme.Clase2" />
+            android:theme="@style/Theme.lab2" />
         <activity
             android:name=".MainActivity3"
             android:exported="false" />
