--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,15 @@
             android:exported="false"
             android:label="@string/title_activity_my_game"
             android:theme="@style/Theme.lab2" />
-        <activity
-            android:name=".TheGameActitvity"
-            android:exported="false"
-            android:label="@string/title_activity_the_game_actitvity"
-            android:theme="@style/Theme.lab2" />
-        <activity
+        <activity android:name=".MyStatisticsActivity" />
+
+<!--        <activity
             android:name=".MainActivity3"
             android:exported="false" />
         <activity
             android:name=".MainActivity2"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
